Correctifs bugs + contrasts errors

--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -6052,7 +6052,7 @@ textarea.form-control-lg {
   justify-content: center;
   width: 15%;
   padding: 0;
-  color: #fff;
+  color: #000;
   text-align: center;
   background: none;
   border: 0;
@@ -6060,7 +6060,7 @@ textarea.form-control-lg {
   transition: opacity 0.15s ease;
 }
 @media (prefers-reduced-motion: reduce) {
-  .carousel-control-prev,
+.carousel-control-prev,
 .carousel-control-next {
     transition: none;
   }
